--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -23,6 +23,39 @@ body {
   font-style: normal;
 }
 
+
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.half-circle {
+  clip-path: inset(0 50% 0 0);
+}
+.fill-half {
+  clip-path: inset(0 50% 0 0);
+}
+.text-gray-800 {
+  fill: #4a5568; /* Adjust this color to match your theme */
+}
+.text-gray-300 {
+  fill: #d1d5db; /* Adjust this color to match your theme */
+}
+
+
+
 .status-indicator {
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
