--- a/CLIENT/src/index.css
+++ b/CLIENT/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: 'Graphik', sans-serif;
+  font-family: 'EinaSemibold', sans-serif;
   font-weight: 300; /* This targets GraphikLight */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
