--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -61,6 +61,11 @@ body, html, #root {
   cursor: pointer;
   padding: 8px 12px;
   width: 300px; /* Set the width to 300px or adjust as needed */
+  transition: background 0.3s; /* Add a transition for the background */
+}
+
+.search-bar:hover {
+  background: #2e2e2e; /* Change to a slightly lighter background */
 }
 
 .search-bar .search-icon {
@@ -579,7 +584,7 @@ main {
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
-  width: 80%;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: 'GeneralSansMedium', sans-serif;
