--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -40,8 +40,185 @@ body, html, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #171717; /* Tailwind's gray-900 */
+  background-color: #0a0a0d;
 }
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+}
+
+.sort-expanded {
+  padding-bottom: 0.9rem; /* Adjust padding to make the connection seamless */
+  margin-bottom: -0.5rem;
+  border-bottom-right-radius: 0px !important;
+  border-bottom-left-radius: 0px !important;
+  z-index: 1;
+}
+
+.dropdown-menu-sort-expanded {
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+  z-index: 0;
+}
+
+.dropdown-menu-sort {
+  position: absolute;
+  top: calc(100% - 0.5rem); /* Adjust top to overlap with the button */
+  left: 0;
+  background-color: #3b3b3b;
+  border-radius: 0.375rem;
+  z-index: 10;
+  overflow: hidden;
+  width: 100%;
+  transform: translateY(-20px);
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.dropdown-menu-sort.slide-out-down {
+  animation: fadeInSlideDown 0.3s ease-out forwards;
+
+}
+
+.dropdown-menu-sort.slide-out-up {
+  animation: fadeOutSlideUp 0.3s ease-out forwards;
+
+}
+
+/* Apply consistent width */
+.sort-expanded, .dropdown-menu-sort {
+  width: auto;
+}
+
+@keyframes fadeInSlideDown {
+  from {
+      opacity: 0;
+      transform: translateY(-20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(4px);
+  }
+}
+
+@keyframes fadeOutSlideUp {
+  from {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  to {
+      opacity: 0;
+      transform: translateY(-20px);
+  }
+}
+
+
+.search-modal.show {
+  animation: fadeInSlideDown 0.3s forwards;
+}
+
+.search-modal.hide {
+  animation: fadeOutSlideUp 0.3s forwards;
+}
+
+/* Add sliding animations */
+@keyframes slideIn {
+  from {
+    transform: translateX(-50%);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-5%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+
+.dropdown-menu {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: #393939; /* Match the button background color */
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  z-index: 1; /* Lower z-index to appear behind the button */
+  height: 100%; /* Ensure the height matches the button */
+  align-items: center; /* Ensure the items are centered */
+  animation: slideIn 0.3s ease-out forwards;
+  white-space: nowrap; /* Prevent text from wrapping */
+  border-left: 1px solid #393939; /* Ensure the left border matches the background color */
+}
+
+.dropdown-menu.hidden {
+  animation: slideOut 0.3s ease-in forwards;
+  display: none;
+}
+
+.dropdown-menu div {
+  padding: 10px;
+  white-space: nowrap; /* Ensure text does not wrap */
+}
+
+.relative {
+  position: relative;
+}
+
+.relative .dropdown-menu {
+  top: 0;
+  left: 100%;
+  transform: translateX(-100%);
+  z-index: 1; /* Ensure it stays behind the button initially */
+}
+
+.medium-expanded {
+  z-index: 2; /* Higher z-index when expanded to appear above other elements */
+  padding-right: 1.125em;
+}
+
+.medium-expanded:hover {
+  background-color: #292929; /* Change background color on hover */
+}
+
+.filter-expanded {
+  z-index: 2; /* Higher z-index when expanded to appear above other elements */
+  padding-right: 0.9em;
+}
+
+.filter-expanded:hover {
+  background-color: #292929; /* Change background color on hover */
+}
+
 
 /* Search bar styling */
 .search-bar-container {
@@ -62,6 +239,7 @@ body, html, #root {
   padding: 8px 12px;
   width: 300px; /* Set the width to 300px or adjust as needed */
   transition: background 0.3s; /* Add a transition for the background */
+  color: #888;
 }
 
 .search-bar:hover {
@@ -109,6 +287,28 @@ body, html, #root {
 }
 
 .search-bar .command-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-search-bar {
+  background: #111111;
+  border-radius: 6px;
+  padding: 2px 8px;
+  margin-left: auto; /* Push the kbd element to the far right */
+  font-size: 12px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  border: 1px solid #3a3a3a;
+  margin-right: -4px; 
+  font-family: GeistRegular;
+  margin-right: 0.1px;
+  margin-left: 10px
+}
+
+.modal-search-bar .command-icon-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -195,30 +395,37 @@ body, html, #root {
   opacity: 1; /* Tailwind gray-400 */
 }
 
+.search-modal{
+  font-family: 'GeistRegular', sans-serif; 
+}
 /* Search modal styling */
 .search-modal .modal {
-  background-color: rgba(0, 0, 0, 0.5); /* Tailwind black with opacity-50 */
+  background-color: transparent; /* Tailwind black with opacity-50 */
   position: fixed;
   inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 50;
+  font-family: 'GeistRegular', sans-serif;
 }
 
 .search-modal .modal-content {
-  background-color: #1a1a1a; /* Dark background */
+  background-color: transparent; /* Dark background */
   color: #fff; /* Light text color */
   padding: 24px; /* Tailwind p-6 */
   border-radius: 8px; /* Tailwind rounded-lg */
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1); /* Tailwind shadow-lg */
   width: 33.3333%; /* Tailwind w-1/3 */
+  font-family: 'GeistRegular', sans-serif;
 }
 
 .search-modal .modal-header {
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+  font-family: 'GeistRegular', sans-serif;
+
 }
 
 .search-modal .modal-header select, .search-modal .modal-header input {
@@ -228,10 +435,13 @@ body, html, #root {
   outline: none;
   padding: 12px 16px;
   font-size: 16px;
+  font-family: 'GeistRegular', sans-serif;
 }
 
 .search-modal .modal-header select {
   margin-right: 8px;
+  font-family: 'GeistRegular', sans-serif;
+
 }
 
 .search-modal .modal-results div {
@@ -239,15 +449,18 @@ body, html, #root {
   cursor: pointer;
   display: flex;
   align-items: center;
+  font-family: 'GeistRegular', sans-serif;
+
 }
 
 .search-modal .modal-results div:hover {
   background: #3a3a3c;
+  font-family: 'GeistRegular', sans-serif;
+
 }
 
 /* Ensure new modal tags do not conflict with existing styles */
 .search-modal .modal-tag {
-  font-family: 'EinaRegular', sans-serif !important;
   background-color: #292929 !important; /* Tailwind gray-700 */
   color: #d1d1d1 !important; /* Tailwind gray-300 */
   padding: 0rem 0.8rem !important; /* Smaller padding for the tags */
@@ -255,10 +468,12 @@ body, html, #root {
   margin-right: 0.3rem !important; /* Tailwind mr-1 */
   margin-bottom: 0.3rem !important; /* Tailwind mb-1 */
   transition: background-color 0.3s; /* Smooth transition for the opacity change */
+  font-family: 'GeistRegular', sans-serif;
 }
 
 .search-modal .modal-tag:hover {
   background-color: #363636 !important;
+  font-family: 'GeistRegular', sans-serif;
 }
 
 .search-modal .modal-tag .tag-button {
@@ -480,17 +695,6 @@ main {
   justify-content: center;
 }
 
-.bg-gray-900 {
-  background-color: #1a202c; /* Tailwind's gray-900 */
-}
-
-.bg-opacity-75 {
-  background-color: rgba(26, 32, 44, 0.75); /* Tailwind's gray-900 with opacity */
-}
-
-.bg-gray-800 {
-  background-color: #2d3748; /* Tailwind's gray-800 */
-}
 
 .p-6 {
   padding: 1.5rem; /* Tailwind's padding-6 */
