--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -71,6 +71,23 @@ body, html, #root {
   }
 }
 
+/* Apply styles to the login and register buttons */
+.btn {
+  font-family: 'GeistRegular', sans-serif;
+  background-color: transparent;
+  color: #888888;
+  border-radius: 4px;
+  padding: 8px 16px;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+}
+
+.btn:hover {
+  background-color: #1f1f1f;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #ffffff;
+}
+
+
 .save-button {
   background-color: #444444 !important; /* Tailwind gray-700 */
   font-family: 'GeistRegular', sans-serif;
