--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -46,7 +46,7 @@ body, html, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #0a0a0d;
+  background-color: #232323;
 }
 
 @keyframes slideDown {
@@ -121,6 +121,16 @@ body, html, #root {
 /* Fade-in animations for HomePage */
 
 /* Add these styles to your CSS file */
+
+/* Add this to your App.css or a relevant CSS file */
+
+.fixed {
+  position: fixed;
+}
+
+.transition-all {
+  transition: all 0.3s;
+}
 
 .fixed-text-container {
   position: fixed;
@@ -852,15 +862,15 @@ body, html, #root {
 }
 
 header {
-  background-color: #0a0a0d; /* Tailwind's gray-900 */
+  background-color: #171717; /* Tailwind's gray-900 */
 }
 
 main {
-  background-color: #0a0a0d; /* Tailwind's gray-900 */
+  background-color: #232323; /* Tailwind's gray-900 */
 }
 
 .footer {
-  background-color: #0a0a0d; /* Tailwind's gray-900 */
+  background-color: #232323; /* Tailwind's gray-900 */
 }
 
 .blur-bg::before {
