--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -1071,6 +1071,102 @@ main {
   fill: #d1d5db; /* Adjust this color to match your theme */
 }
 
+.dropdown-enter {
+  opacity: 0;
+  transform: translateY(-10%);
+}
+
+.dropdown-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 200ms, transform 200ms;
+}
+
+.dropdown-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.dropdown-exit-active {
+  opacity: 0;
+  transform: translateY(-10%);
+  transition: opacity 200ms, transform 200ms;
+}
+
+
+/* Status Dropdown Styles */
+.status-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #444;
+  width: 100%;
+  border-radius: 0.375rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: all 0.3s ease;
+}
+
+.status-dropdown-enter {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.status-dropdown-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 200ms, transform 200ms;
+}
+
+.status-dropdown-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.status-dropdown-exit-active {
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 200ms, transform 200ms;
+}
+
+.status-dropdown-menu {
+  padding: 8px 0;
+}
+
+.status-dropdown-item {
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.status-dropdown-item:hover {
+  background-color: #555;
+}
+
+.status-button {
+  background-color: #444;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 0.375rem;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 160px; /* Consistent width */
+}
+
+.status-button svg {
+  margin-left: 8px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.status-button.rotate-180 {
+  transform: rotate(180deg);
+}
+
+
 /* Status indicator styles */
 .status-indicator {
   padding: 0.25rem 0.5rem;
@@ -1083,17 +1179,17 @@ main {
 }
 
 .status-to-consume {
-  background-color: #f0ad4e;
+  background-color: #f87171;
   color: #fff;
 }
 
 .status-consuming {
-  background-color: #5bc0de;
+  background-color: #fbbf24;
   color: #fff;
 }
 
 .status-consumed {
-  background-color: #5cb85c;
+  background-color: #34d399;
   color: #fff;
 }
 
